test/bad/check/AmbiguousInt.hs
module AmbiguousInt where

ambiguous = 1 + 2
